fixed  inputs alignment

--- a/style.css
+++ b/style.css
@@ -286,7 +286,6 @@
 #swap-form .form_input-wrapper {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
 }
 
 
